# epicon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agents.md  pyproject.toml  setup.py
.github/workflows/: publish-testpypi.yml  publish.yml  test.yml
epicon/: __init__.py  _jit.py
epicon/activations/: __init__.py  base.py  leaky_relu.py  relu.py  sigmoid.py  softmax.py  tanh.py
epicon/datasets/: __init__.py  generator.py  loader.py
epicon/ensemble/: __init__.py  random_forest_classifier.py  random_forest_regressor.py
epicon/layers/: __init__.py  base.py  batch_normalization.py  conv1d.py  conv2d.py  dense.py  dropout.py  flatten.py  pooling.py
epicon/linear_model/: __init__.py  lasso.py  linear_regression.py  logistic_regression.py  ridge.py
epicon/losses/: __init__.py  base.py  binary_cross_entropy.py  categorical_cross_entropy.py  mse.py
epicon/metrics/: __init__.py  classification.py  regression.py
epicon/models/: __init__.py  callbacks.py  model.py  sequential.py
epicon/naive_bayes/: __init__.py  gaussian_nb.py
epicon/neighbors/: __init__.py  knn_classifier.py  knn_regressor.py
epicon/optimizers/: __init__.py  adam.py  base.py  gradient_descent.py  momentum.py  schedulers.py
epicon/preprocessing/: __init__.py  encoder.py  scaler.py  split.py
epicon/tree/: __init__.py  decision_tree_classifier.py  decision_tree_regressor.py
epicon/utils/: __init__.py  layer_config.py  model_builder.py
examples/: example.py  example_2.py  example_iris_classification.py  example_ml_binary.py  example_ml_forest.py  example_ml_iris.py  example_nn_sequential.py
nnf/: __init__.py  _jit.py
nnf/datasets/: __init__.py  generator.py  loader.py
nnf/ensemble/: __init__.py  random_forest_classifier.py  random_forest_regressor.py
nnf/layers/: __init__.py  conv1d.py  dense.py
nnf/linear_model/: __init__.py  lasso.py  linear_regression.py  logistic_regression.py  ridge.py
nnf/metrics/: __init__.py  classification.py  regression.py
nnf/models/: __init__.py  model.py  sequential.py
nnf/naive_bayes/: __init__.py  gaussian_nb.py
nnf/neighbors/: __init__.py  knn_classifier.py  knn_regressor.py
nnf/optimizers/: __init__.py  adam.py
nnf/preprocessing/: __init__.py  encoder.py  scaler.py  split.py
nnf/tree/: __init__.py  decision_tree_classifier.py  decision_tree_regressor.py
nnf/utils/: __init__.py  model_builder.py
tests/: test_model_builder.py
tests/test_activations/: test_relu.py  test_sigmoid.py  test_softmax.py  test_tanh.py
(+32 files in other folders)
